deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-release-v2
spec:
  selector:
    matchLabels:
        app: canary-release
        deployment: canary-release
  replicas: 1
  template:
    metadata:
      labels:
        app: canary-release
        deployment: canary-release
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: canary-release
          image: default-route-openshift-image-registry.apps-crc.testing/demo/canary-release
          ports:
            - containerPort: 8080
