virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-release
spec:
  hosts:
  - "*"
  gateways:
  - canary-release-gateway
  http:
  - route:
    - destination:
          host: canary-release
          port:
            number: 8080
          subset: v1
      weight: 50
    - destination:
          host: canary-release
          port:
            number: 8080
          subset: v2
      weight: 50
